--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -11,10 +11,7 @@
 	<groupId>com.example</groupId>
 	<artifactId>nazik-api</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<organization>
-		<name>jolygolden</name>
-		<url>https://nazik.com</url>
-	</organization>
+
 	<name>spring-boot-demo</name>
 	<description>Demo project for Spring Boot</description>
 	<url/>
@@ -33,6 +30,8 @@
 	<properties>
 		<java.version>17</java.version>
 		<docker.username>jolygolden</docker.username>
+		<docker.image.name>nazik-api</docker.image.name>
+		<docker.image.tag/>
 	</properties>
 	<dependencies>
 
@@ -190,7 +189,7 @@
 						</platforms>
 					</from>
 					<to>
-						<image>docker.io/${docker.username}/${project.artifactId}:${project.version}</image>
+						<image>docker.io/${docker.username}/${docker.image.name}:${docker.image.tag}</image>
 						<tags>
 							<tag>
 								latest
