fixing options by replacing health

--- a/.github/workflows/backend-cd.yml
+++ b/.github/workflows/backend-cd.yml
@@ -19,11 +19,10 @@ jobs:
           POSTGRES_DB: customer
         ports:
           - 5332:5432
-        options:
-          --health-cmd pg_isready
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
+        options: >
+          -e POSTGRES_USER=nazik
+          -e POSTGRES_PASSWORD=password
+          -e POSTGRES_DB=customer
     defaults:
       run:
         working-directory: ./backend
