--- a/.github/workflows/backend-cd.yml
+++ b/.github/workflows/backend-cd.yml
@@ -7,6 +7,7 @@ on:
       - main
     paths:
       - backend/**
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -19,10 +20,6 @@ jobs:
           POSTGRES_DB: customer
         ports:
           - 5332:5432
-        options: >
-          -e POSTGRES_USER=nazik
-          -e POSTGRES_PASSWORD=password
-          -e POSTGRES_DB=customer
     defaults:
       run:
         working-directory: ./backend
@@ -38,13 +35,19 @@ jobs:
       - name: Build Package Push with Maven
         run: mvn -ntp -B verify
 
+      - name: Install Docker Compose
+        run: |
+          sudo curl -L "https://github.com/docker/compose/releases/download/1.29.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+          sudo chmod +x /usr/local/bin/docker-compose
+          docker-compose --version
+
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_ACCESS_TOKEN }}
 
-      - name: Build and Push Docker Image
+      - name: Build and Push Docker Image using Docker Compose
         run: |
           docker-compose -f docker-compose.yml build
           docker-compose -f docker-compose.yml push
