--- a/.github/workflows/backend-cd.yml
+++ b/.github/workflows/backend-cd.yml
@@ -49,8 +49,8 @@ jobs:
 
       - name: Build and Push Docker Image using Docker Compose
         run: |
-          docker-compose -f docker-compose.yml build
-          docker-compose -f docker-compose.yml push
+          docker-compose -f ../docker-compose.yml build
+          docker-compose -f ../docker-compose.yml push
 
       - name: Log in to Amazon ECR
         env:
