--- a/.github/workflows/backend-cd.yml
+++ b/.github/workflows/backend-cd.yml
@@ -32,14 +32,8 @@ jobs:
           java-version: '17'
           cache: 'maven'
 
-      - name: Build Package Push with Maven
+      - name: Build Package with Maven
         run: mvn -ntp -B verify
-
-      - name: Install Docker Compose
-        run: |
-          sudo curl -L "https://github.com/docker/compose/releases/download/1.29.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
-          sudo chmod +x /usr/local/bin/docker-compose
-          docker-compose --version
 
       - name: Login to Docker Hub
         uses: docker/login-action@v2
@@ -49,8 +43,8 @@ jobs:
 
       - name: Build and Push Docker Image using Docker Compose
         run: |
-          docker-compose -f ../docker-compose.yml build
-          docker-compose -f ../docker-compose.yml push
+          docker-compose -f ../docker-compose.yml build nazik-api
+          docker-compose -f ../docker-compose.yml push nazik-api
 
       - name: Log in to Amazon ECR
         env:
@@ -62,11 +56,16 @@ jobs:
           aws configure set default.region eu-central-1
           aws ecr get-login-password --region eu-central-1 | docker login --username AWS --password-stdin 084375572307.dkr.ecr.eu-central-1.amazonaws.com/nazik-api
 
-      - name: Build and Push Docker Image to ECR
+      - name: Tag Docker Image for ECR
         env:
           ECR_REPOSITORY: '084375572307.dkr.ecr.eu-central-1.amazonaws.com/nazik-api'
         run: |
-          docker tag ${{ secrets.DOCKERHUB_USERNAME }}/nazik-api:latest $ECR_REPOSITORY:latest
+          docker tag jolygolden/nazik-api:latest $ECR_REPOSITORY:latest
+
+      - name: Push Docker Image to ECR
+        env:
+          ECR_REPOSITORY: '084375572307.dkr.ecr.eu-central-1.amazonaws.com/nazik-api'
+        run: |
           docker push $ECR_REPOSITORY:latest
 
       - name: Update ECS Service with New Image
