--- a/.github/workflows/backend-cd.yml
+++ b/.github/workflows/backend-cd.yml
@@ -44,7 +44,7 @@ jobs:
 
       - name: Tag and Push Docker Image to Docker Hub
         run: |
-          docker tag nazik-api:latest ${{ secrets.DOCKERHUB_USERNAME }}/nazik-api:latest
+          docker tag jolygolden/nazik-api:latest ${{ secrets.DOCKERHUB_USERNAME }}/nazik-api:latest
           docker push ${{ secrets.DOCKERHUB_USERNAME }}/nazik-api:latest
 
       - name: Log in to Amazon ECR
@@ -61,7 +61,7 @@ jobs:
         env:
           ECR_REPOSITORY: '084375572307.dkr.ecr.eu-central-1.amazonaws.com/nazik-api'
         run: |
-          docker tag nazik-api:latest $ECR_REPOSITORY:latest
+          docker tag jolygolden/nazik-api:latest $ECR_REPOSITORY:latest
 
       - name: Push Docker Image to ECR
         env:
