--- a/.github/workflows/backend-cd.yml
+++ b/.github/workflows/backend-cd.yml
@@ -32,19 +32,28 @@ jobs:
           java-version: '17'
           cache: 'maven'
 
+      - name: Build Package Push with Maven
+        run: mvn -ntp -B verify
+
       - name: Install Docker Compose
         run: |
-          sudo curl -L "https://github.com/docker/compose/releases/download/$(curl -s https://api.github.com/repos/docker/compose/releases/latest | grep tag_name | cut -d '"' -f 4)/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+          sudo curl -L "https://github.com/docker/compose/releases/download/1.29.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
           sudo chmod +x /usr/local/bin/docker-compose
           docker-compose --version
 
-      - name: Build Docker Image using Docker Compose
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_ACCESS_TOKEN }}
+
+      - name: Build and Tag Docker Image using Docker Compose
         run: |
           docker-compose -f ../docker-compose.yml build nazik-api
-
-      - name: Tag and Push Docker Image to Docker Hub
-        run: |
           docker tag jolygolden/nazik-api:latest ${{ secrets.DOCKERHUB_USERNAME }}/nazik-api:latest
+
+      - name: Push Docker Image to Docker Hub
+        run: |
           docker push ${{ secrets.DOCKERHUB_USERNAME }}/nazik-api:latest
 
       - name: Log in to Amazon ECR
@@ -61,7 +70,7 @@ jobs:
         env:
           ECR_REPOSITORY: '084375572307.dkr.ecr.eu-central-1.amazonaws.com/nazik-api'
         run: |
-          docker tag jolygolden/nazik-api:latest $ECR_REPOSITORY:latest
+          docker tag ${{ secrets.DOCKERHUB_USERNAME }}/nazik-api:latest $ECR_REPOSITORY:latest
 
       - name: Push Docker Image to ECR
         env:
