--- a/.github/workflows/backend-cd.yml
+++ b/.github/workflows/backend-cd.yml
@@ -32,7 +32,7 @@ jobs:
           java-version: '17'
           cache: 'maven'
 
-      - name: Build Package Push with Maven
+      - name: Build Package with Maven
         run: mvn -ntp -B verify
 
       - name: Install Docker Compose
@@ -47,14 +47,10 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_ACCESS_TOKEN }}
 
-      - name: Build and Tag Docker Image using Docker Compose
+      - name: Build and Push Docker Image using Docker Compose
         run: |
-          docker-compose -f ../docker-compose.yml build nazik-api
-          docker tag jolygolden/nazik-api:latest ${{ secrets.DOCKERHUB_USERNAME }}/nazik-api:latest
-
-      - name: Push Docker Image to Docker Hub
-        run: |
-          docker push ${{ secrets.DOCKERHUB_USERNAME }}/nazik-api:latest
+          docker-compose -f ../docker-compose.yml build --no-cache
+          docker-compose -f ../docker-compose.yml push
 
       - name: Log in to Amazon ECR
         env:
@@ -64,18 +60,13 @@ jobs:
           aws configure set aws_access_key_id $AWS_ACCESS_KEY_ID
           aws configure set aws_secret_access_key $AWS_SECRET_ACCESS_KEY
           aws configure set default.region eu-central-1
-          aws ecr get-login-password --region eu-central-1 | docker login --username AWS --password-stdin 084375572307.dkr.ecr.eu-central-1.amazonaws.com
+          aws ecr get-login-password --region eu-central-1 | docker login --username AWS --password-stdin 084375572307.dkr.ecr.eu-central-1.amazonaws.com/nazik-api
 
-      - name: Tag Docker Image for ECR
+      - name: Tag and Push Docker Image to ECR
         env:
           ECR_REPOSITORY: '084375572307.dkr.ecr.eu-central-1.amazonaws.com/nazik-api'
         run: |
-          docker tag ${{ secrets.DOCKERHUB_USERNAME }}/nazik-api $ECR_REPOSITORY:latest
-
-      - name: Push Docker Image to ECR
-        env:
-          ECR_REPOSITORY: '084375572307.dkr.ecr.eu-central-1.amazonaws.com/nazik-api'
-        run: |
+          docker tag jolygolden/nazik-api:latest $ECR_REPOSITORY:latest
           docker push $ECR_REPOSITORY:latest
 
       - name: Update ECS Service with New Image
