--- a/.github/workflows/backend-cd.yml
+++ b/.github/workflows/backend-cd.yml
@@ -47,20 +47,13 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_ACCESS_TOKEN }}
 
-      - name: Build and Push Docker Image using Docker Compose
+      - name: Build Docker Image
         run: |
           docker-compose -f ../docker-compose.yml build --no-cache
-          docker-compose -f ../docker-compose.yml push
 
-      - name: Log in to Amazon ECR
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        run: |
-          aws configure set aws_access_key_id $AWS_ACCESS_KEY_ID
-          aws configure set aws_secret_access_key $AWS_SECRET_ACCESS_KEY
-          aws configure set default.region eu-central-1
-          aws ecr get-login-password --region eu-central-1 | docker login --username AWS --password-stdin 084375572307.dkr.ecr.eu-central-1.amazonaws.com/nazik-api
+      # Добавляем шаг для проверки списка Docker образов
+      - name: Verify Docker Image
+        run: docker images
 
       - name: Tag and Push Docker Image to ECR
         env:
@@ -69,9 +62,13 @@ jobs:
           docker tag jolygolden/nazik-api:latest $ECR_REPOSITORY:latest
           docker push $ECR_REPOSITORY:latest
 
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: eu-central-1
+
       - name: Update ECS Service with New Image
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         run: |
           aws ecs update-service --cluster my-cluster --service nazik-backend-service --force-new-deployment
